# neuron-model

./: .dockerignore  .gitignore  AUTONOMOUS_RESEARCH_GUIDE.md  CITATION.cff  Dockerfile  NETWORK_CONFIG_GUIDE.md  README.md  REPRODUCIBILITY.md  build_activity_dataset.py  build_network.py  convert_activity_dataset.py  docker-compose.yml  interactive_mnist.py  interactive_training.py  neuron_visualizer.py  plot_concept_hierarchy.py  pyproject.toml  requirements.txt  synaptic_connections_analysis.py  visualize_activity_3d.py  visualize_activity_dataset.py  visualize_network_activity.py
pipeline/: .dockerignore  AGENTS.md  AGENT_GUIDE.md  Dockerfile  __init__.py  build_activity_dataset.py  config.py  database.py  docker-compose.yml  docker_config.yaml  docker_config_minimal.yaml  example_config.yaml  orchestrator.py  pyproject.toml  requirements.txt  run_local.sh  runner.py  step1_build_network.py  step2_record_activity.py  step3_prepare_data.py  step4_train_model.py  step5_evaluate.py  utils.py
pipeline/api/: __init__.py  database.py  main.py  models.py
pipeline/scripts/: download_test_artifacts.py
pipeline/server/: main.py
pipeline/steps/: __init__.py  activity_recorder.py  base.py  classifier_trainer.py  data_preparer.py  evaluator.py  network_builder.py
pipeline/tests/: __init__.py  conftest.py  e2e_browser.spec.js  test_api.py  test_cancellation.py  test_cancellation_repro.py  test_config.py  test_integration.py  test_orchestrator.py  test_pause_cancel.py  test_pipeline_steps.py  test_runner.py  test_server.py  test_zombie_cancel.py
pipeline/utils/: __init__.py  activity_data.py
pipeline/visualization/: cluster_activity_data.py  (+5 more)
(+200 files in other folders)
