[project]
name = "neuron-model"
version = "0.1.0"
description = "A virtual laboratory for artificial life research with brain-inspired neural models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.7.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "plotly>=5.13.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "snntorch>=0.9.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.64.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snn_classification_realtime"]
